JG51OverSpain2 BETA
Structure of attack set up, aircrafts inserted, defenses populated,
description and weather created.

Look to imrpove on and polish any bugs and smooth out the mission play
through.

--- a/JG51OverSpain2_ru.properties
+++ b/JG51OverSpain2_ru.properties
@@ -1,2 +1,3 @@
-Short \n
-Description \n
+Name Villarreal Siege
+Short The siege of Villarreal is coming to an end, the Nationalist rebels have launched a massive attack to eliminate Republican Spains main attack force. Without reinforcements and surrounded, all they can do is defend and awai air support.\n\n\n
+Description October 17th, 1936\n\nThe Nationalsit rebels are planning to finish the siege of Vilarreal , a massive attack has been launched with support of new importated Italian bombers and with the support of German fighters and dive bombers of the Condor Legion. \n\nRadio interceptions have come up with infromation that the Spainish Republicans plan to air drop supplies of new guns and munitions to the defending pocket. Other rumors have circulated amongst the ground troops that other small bombers have recently arrived at the airfield north of Vilarreal.\n\nIt is the Condor Legions primary task is to eliminate the air drop aircrafts in order to prevent supplies from entering the pocket and further increasing our ground casualties. Secondary objective is to assist in eliminating any remaing air threats that have potential to harm our advances north.\n
